# gapic-generator-ruby

./: .gitmodules
bazel_example/: WORKSPACE.bazel  google-cloud-compute-v1.model.json  google-cloud-language-v1.model.json  google_showcase_v1beta1.model.json  stripmine.rb
bazel_example/diregapic/: BUILD.bazel
bazel_example/gapic-generator/: BUILD.bazel
bazel_example/gapic-generator-cloud/: BUILD.bazel  speech_v1.yaml  translate_grpc_service_config.json  translate_v3.yaml
bazel_example/gapic-generator-cloud/automl-v1/: BUILD.bazel
gapic-common/: gapic-common.gemspec
gapic-common/lib/gapic/: rest.rb  routing_header_extractor.rb
gapic-common/lib/gapic/common/: version.rb
gapic-common/lib/gapic/rest/: client_stub.rb  fiber_enumerator.rb  server_stream.rb  streaming_parser.rb  threaded_enumerator.rb
gapic-common/lib/gapic/routing_header_extractor/: routing_parameter.rb
gapic-common/test/: test_helper.rb
gapic-common/test/fixtures/: routing_example.proto  routing_example_pb.rb
gapic-common/test/gapic/: routing_header_extractor_test.rb
gapic-common/test/gapic/rest/: fiber_enumerator_test.rb  firestore_block_test.rb  firestore_httpx_simple_test.rb  firestore_server_stream_test.rb  firestore_simple_test.rb  firestore_threaded_enumerator_test.rb  rest_server_stream.rb
gapic-generator/: .gitignore  .rubocop.yml  Rakefile  gapic-generator.gemspec
gapic-generator-ads/: Rakefile  docker-entrypoint.sh
gapic-generator-ads/lib/gapic/generators/: ads_generator.rb
gapic-generator-cloud/: Rakefile  gapic-generator-cloud.gemspec
gapic-generator-cloud/test/: test_helper.rb
gapic-generator-cloud/test/gapic/generators/: cloud_generator_language_v1_test.rb
gapic-generator-cloud/test/gapic/model/: model_test.rb
gapic-generator/gem_templates/: binary.erb
gapic-generator/lib/gapic/: file_formatter.rb  resource_lookup.rb
gapic-generator/lib/gapic/generators/: base_generator.rb  default_generator.rb
gapic-generator/lib/gapic/path_pattern/: parser.rb  pattern.rb  segment.rb
gapic-generator/lib/gapic/presenters/: field_presenter.rb  gem_presenter.rb  message_presenter.rb  method_presenter.rb  method_rest_presenter.rb  package_presenter.rb  service_presenter.rb  service_rest_presenter.rb
gapic-generator/lib/gapic/schema/: api.rb  loader.rb  wrappers.rb
gapic-generator/lib/google/gapic/: runner.rb
gapic-generator/lib/model/: README.md  models.rb  package.pb.rb  package_pb.rb  sql_create.rb  sql_insert.rb
gapic-generator/templates/default/: codegen.erb  model.erb  transcoding_analysis_package.erb
gapic-generator/test/: test_helper.rb
gapic-info-scoop/: .gitignore  .toys.rb  Gemfile  README.md  gapic-info-scoop.gemspec  output
gapic-info-scoop/all_input/: google-ads-admob-v1.model.json  google-analytics-admin-v1alpha.model.json  google-apps-drive-activity-v2.model.json  google-area120-tables-v1alpha1.model.json  google-cloud-accessapproval-v1.model.json  google-cloud-admin-database-v1.model.json  google-cloud-admin-instance-v1.model.json  google-cloud-aiplatform-v1.model.json  google-cloud-aiplatform-v1beta1.model.json  google-cloud-airflow-service-v1.model.json  google-cloud-airflow-service-v1beta1.model.json  google-cloud-analytics-data-v1beta.model.json  google-cloud-api-servicecontrol-v1.model.json  google-cloud-api-servicemanagement-v1.model.json  google-cloud-api-serviceusage-v1.model.json  google-cloud-api-serviceusage-v1beta1.model.json  google-cloud-apigateway-v1.model.json  google-cloud-apigeeconnect-v1.model.json  google-cloud-appengine-v1.model.json  google-cloud-apps-alertcenter-v1beta1.model.json  google-cloud-asset-v1.model.json  google-cloud-asset-v1p1beta1.model.json  google-cloud-asset-v1p2beta1.model.json  google-cloud-asset-v1p4beta1.model.json  google-cloud-asset-v1p5beta1.model.json  google-cloud-asset-v1p7beta1.model.json  google-cloud-assuredworkloads-v1.model.json  google-cloud-assuredworkloads-v1beta1.model.json  google-cloud-automl-v1.model.json  google-cloud-automl-v1beta1.model.json  google-cloud-baremetalsolution-v2.model.json  google-cloud-bigquery-connection-v1.model.json  google-cloud-bigquery-connection-v1beta1.model.json  google-cloud-bigquery-datatransfer-v1.model.json  google-cloud-bigquery-migration-v2alpha.model.json  google-cloud-bigquery-reservation-v1.model.json  google-cloud-bigquery-reservation-v1beta1.model.json  google-cloud-bigquery-storage-v1.model.json  google-cloud-bigquery-storage-v1beta1.model.json  google-cloud-bigquery-v2.model.json  (+200 more)
gapic-info-scoop/db/: gapic-info.db
gapic-info-scoop/lib/: model
gapic-info-scoop/lib/model/: README.md  generation.pb.rb  generation.proto  generation_pb.rb  models.rb
gapic-info-scoop/test/: test_helper.rb
protoc-ruby-sql/: Gemfile  LICENSE.txt  README.md  Rakefile  expected_output  protoc-ruby-sql.gemspec
protoc-ruby-sql/templates/: sql_create.erb  sql_insert.erb
protoc-ruby-sql/templates/sql_create/: _create.erb
protoc-ruby-sql/templates/sql_insert/: _insert.erb
protoc-ruby-sql/test/: test_helper.rb
protoc-ruby-sql/test/generators/: sql_test.rb
rules_ruby_gapic/: BUILD.bazel  gapic_src_repo.bzl  repositories.bzl
rules_ruby_gapic/ruby_binary/: ruby_binary.bzl  ruby_bundler_raketest.bzl
rules_ruby_gapic/ruby_binary/test/: BUILD.bazel
rules_ruby_gapic/ruby_binary/test/langv1test_test/: Rakefile
rules_ruby_gapic/ruby_binary/test/raketest_test/: Gemfile  README.md  Rakefile  helloworld.gemspec
rules_ruby_gapic/ruby_binary/test/raketest_test/lib/: helloworld.rb
rules_ruby_gapic/ruby_binary/test/raketest_test/test/: helloworld_test.rb  test_helper.rb
shared/: Rakefile  gem_defaults.rb
shared/config/: ads_full.yml  ads_stuff.yml  model.yml  regapic.yml  showcase.yml
shared/protos/garbage/: garbage.proto
shared/protos/model/: generation.proto  package.proto
shared/protos/regapic/: regapic.proto
shared/test/: test_helper.rb
shared_genparse/: README.md  regen_descriptors.sh
showcase/: Gemfile  google-showcase.gemspec
showcase/test/: acceptance.rb  compliance.rb
v1beta1/: echo.proto  messaging.proto
(+2574 files in other folders)
