# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Defines the targets for the google cloud language library to be built
with gapic-generator-ruby cloud flavor
"""

load(
    "@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic.bzl",
    "ruby_cloud_gapic_library",
    "ruby_grpc_library",
    "ruby_proto_library",
)
load(
    "@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_legacy.bzl",
    "ruby_nonbundler_cloud_gapic_library",
)
load(
    "@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_pkg.bzl",
    "ruby_gapic_assembly_pkg",
)

ruby_proto_library(
    name = "automl_ruby_proto",
    deps = ["@com_google_googleapis//google/cloud/automl/v1:automl_proto"],
)

ruby_grpc_library(
    name = "automl_ruby_grpc",
    srcs = ["@com_google_googleapis//google/cloud/automl/v1:automl_proto"],
    deps = [":automl_ruby_proto"],
)

ruby_gapic_assembly_pkg(
    name = "google-cloud-automl-v1-ruby-literal",
    deps = [
        ":automl_ruby_gapic_literal",
        ":automl_ruby_grpc",
        ":automl_ruby_proto",
    ],
)

ruby_cloud_gapic_library(
    name = "automl_ruby_gapic_literal",
    srcs = ["@com_google_googleapis//google/cloud/automl/v1:automl_proto_with_info"],
    extra_protoc_parameters = [
        ":gem.:name=google-cloud-automl-v1",
        ":gem.:title=Cloud AutoML V1",
        ":gem.:description=AutoML makes the power of machine learning available to you even if you have limited knowledge of machine learning. You can use AutoML to build on Google's machine learning capabilities to create your own custom machine learning models that are tailored to your business needs, and then integrate those models into your applications and web sites.",
        ":gem.:env_prefix=AUTOML",
        ":overrides.:file_path.auto_ml=automl",
        ":overrides.:namespace.AutoMl=AutoML",
        ":overrides.:namespace.Automl=AutoML",
        ":gem.:yard_strict=false",
        ":gem.:product_documentation_url=https://cloud.google.com/automl",
        ":gem.:api_id=automl.googleapis.com",
        ":gem.:api_shortname=automl",
    ],
    grpc_service_config = ":automl_grpc_service_config.json",
    deps = [
        ":automl_ruby_grpc",
        ":automl_ruby_proto",
    ],
)

ruby_gapic_assembly_pkg(
    name = "google-cloud-automl-v1-ruby-readable",
    deps = [
        ":automl_ruby_gapic_readable",
        ":automl_ruby_grpc",
        ":automl_ruby_proto",
    ],
)

ruby_cloud_gapic_library(
    name = "automl_ruby_gapic_readable",
    srcs = ["@com_google_googleapis//google/cloud/automl/v1:automl_proto_with_info"],
    extra_protoc_parameters = [
        "ruby-cloud-gem-name=google-cloud-automl-v1",
        "ruby-cloud-title=Cloud AutoML V1",
        "ruby-cloud-description=AutoML makes the power of machine learning available to you even if you have limited knowledge of machine learning. You can use AutoML to build on Google's machine learning capabilities to create your own custom machine learning models that are tailored to your business needs, and then integrate those models into your applications and web sites.",
        "ruby-cloud-env-prefix=AUTOML",
        "ruby-cloud-path-override=auto_ml=automl",
        "ruby-cloud-namespace-override=AutoMl=AutoML;Automl=AutoML",
        "ruby-cloud-yard-strict=false",
        "ruby-cloud-product-url=https://cloud.google.com/automl",
        "ruby-cloud-api-id=automl.googleapis.com",
        "ruby-cloud-api-shortname=automl",
    ],
    grpc_service_config = ":automl_grpc_service_config.json",
    deps = [
        ":automl_ruby_grpc",
        ":automl_ruby_proto",
    ],
)
