# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Targets to verify that ruby_binary rule is working correctly
"""
load ("//rules_ruby_gapic/ruby_binary:ruby_binary.bzl", "ruby_binary")
load ("//rules_ruby_gapic/ruby_binary:ruby_bundler_binary.bzl", "ruby_bundler_binary")
load ("//rules_ruby_gapic/ruby_binary:ruby_bundler_raketest.bzl", "ruby_bundler_raketest")
load ("//rules_ruby_gapic/ruby:bundled_install_context.bzl", "bundled_install_context")

##
# Running the hello world file with a dependency on a Ruby StandardLib as an executable shellscript
# the script is artificially a two-parter to verify that internal file loading via require
# will work as well
#
ruby_binary (
  name = "multifile_rubylib_sh",
  entrypoint = ":multifile_rubylib_test/hello_ruby.rb",
  srcs = [":multifile_rubylib_test/hello_ruby.rb", ":multifile_rubylib_test/lib/hello_ruby_lib.rb"],
  src_base = ":multifile_rubylib_test"
)

##
# A context for the bundled installation for the rainbow_bundler test program
#
bundled_install_context(
  name = "rainbow_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_rainbow_test//:export/Gemfile",
  all_bundled_files = "@bundler_rainbow_test//:bundler_installed_gems",
)

##
# Running the hello world-style program that calls code from a 'rainbow' gem via bundler
#
ruby_bundler_binary (
  name = "rainbow_bundler_sh",
  entrypoint = ":rainbow_bundler_test/lib/rainbow_main.rb",
  srcs = [":rainbow_bundler_test/lib/rainbow_main.rb"],
  src_base = ":rainbow_bundler_test",
  ruby_context = "//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":rainbow_bundled_context",
  visibility = ["//visibility:public"],
)

##
# A context for the bundled installation for the rubocop_bundler test program
#
bundled_install_context(
  name = "rubocop_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_rubocop_test//:export/Gemfile",
  all_bundled_files = "@bundler_rubocop_test//:bundler_installed_gems",
)

##
# Running the hello world-style program that makes a 'system' call using rubocop 
# as well as calls code from a 'rainbow' gem via bundler
#
ruby_bundler_binary (
  name = "rubocop_bundler_sh",
  entrypoint = ":syscall_rubocop_bundler_test/lib/rubocop_main.rb",
  srcs = [":syscall_rubocop_bundler_test/lib/rubocop_main.rb"],
  src_base = ":syscall_rubocop_bundler_test",
  ruby_context = "//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":rubocop_bundled_context",
  visibility = ["//visibility:public"],
)

##
# A context for the bundled installation for the raketest_test test invocation
#
bundled_install_context(
  name = "raketest_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_raketest_test//:export/Gemfile",
  all_bundled_files = "@bundler_raketest_test//:bundler_installed_gems",
)

##
# Running the hello world-style program that makes a 'system' call using rubocop 
# as well as calls code from a 'rainbow' gem via bundler
#
ruby_bundler_raketest (
  name = "raketest_bundler_test_sh",
  entrypoint = ":raketest_test/Rakefile",
  srcs = [":raketest_test/Rakefile", 
    ":raketest_test/helloworld.gemspec", 
    ":raketest_test/lib/helloworld.rb", 
    ":raketest_test/lib/helloworld/version.rb", 
    ":raketest_test/test/helloworld_test.rb", 
    ":raketest_test/test/test_helper.rb" ],
  src_base = ":raketest_test",
  ruby_context = "//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":raketest_bundled_context",
  visibility = ["//visibility:public"],
)


# ##
# # Running the hello world-style program that makes a 'system' call using rubocop 
# # as well as calls code from a 'rainbow' gem via bundler
# #
# ruby_bundler_binary (
#   name = "raketest_bundler_sh",
#   entrypoint = ":raketest_test/lib/helloworld.rb",
#   srcs = [":raketest_test/Rakefile", ":raketest_test/helloworld.gemspec", ":raketest_test/lib/helloworld.rb", ":raketest_test/lib/helloworld/version.rb"],
#   src_base = ":raketest_test",
#   ruby_context = "//rules_ruby_gapic/ruby:ruby_context",
#   bundled_context = ":raketest_bundled_context",
#   visibility = ["//visibility:public"],
# )



##
# A context for the bundled installation for the language_v1 test invocation
#
bundled_install_context(
  name = "langv1test_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_langv1test_test//:export/Gemfile",
  all_bundled_files = "@bundler_langv1test_test//:bundler_installed_gems",
)

##
# Running the hello world-style program that makes a 'system' call using rubocop 
# as well as calls code from a 'rainbow' gem via bundler
#
ruby_bundler_raketest (
  name = "langv1test_bundler_test_sh",
  entrypoint = ":langv1test_test/Rakefile",
  srcs = glob(["langv1test_test/**/*"]),
  src_base = ":langv1test_test",
  ruby_context = "//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":langv1test_bundled_context",
  visibility = ["//visibility:public"],
)